testdata/invalid/bad_json.cast
{"version": 2, "width": 80, "height": 24
[0.5, "o", "hello"]